--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.google.gms:google-services:4.1.0'
+        classpath 'com.google.auto.value:auto-value:1.4'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
@@ -25,3 +28,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
