Added firebase auth to build.gradle Declared activities in android manifest Point to the appropriate layout in each activity file.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".WelcomeActivity">
+        </activity>
+
+        <activity
+            android:name=".TermsActivity">
+        </activity>
+
+        <activity
+            android:name=".LoginActivity">
+        </activity>
+
     </application>
 
 </manifest>
