--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
         <activity
             android:name=".LoginActivity">
         </activity>
-
+        <activity
+            android:name=".RegisterActivity">
+        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
