--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,15 @@
         <activity
             android:name=".RegisterActivity">
         </activity>
+
+        <activity
+            android:name=".TypeActivity">
+        </activity>
+
+        <activity
+            android:name=".sEditProfileActivity">
+        </activity>
+
         <activity android:name=".MainActivity"></activity>
         <uses-library
             android:name="org.apache.http.legacy"
